finalizando o projeto com refatorações no codigo e comentarios